--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@antv/g6": "^4.2.5",
     "@antv/layout": "^0.1.16",
     "@antv/x6": "^1.18.1",
+    "@tiptap/core": "^2.0.0-beta.105",
     "@tiptap/extension-character-count": "^2.0.0-beta.13",
     "@tiptap/extension-document": "^2.0.0-beta.13",
     "@tiptap/extension-mention": "^2.0.0-beta.63",
