--- a/package.json
+++ b/package.json
@@ -22,24 +22,23 @@
     "@tiptap/vue-3": "^2.0.0-beta.48",
     "@types/esrever": "^0.2.0",
     "@vue/shared": "^3.0.11",
-    "ant-design-vue": ">=2.1.2",
+    "ant-design-vue": "2.1.2",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "direction": "^2.0.0",
-    "edu-graph-constant": "0.0.11",
+    "edu-graph-constant": "0.0.14",
     "esrever": "^0.2.0",
     "immer": "^7.0.0",
     "is-hotkey": "^0.2.0",
     "is-plain-object": "^3.0.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
+    "prosemirror-state": "^1.3.4",
     "qiniu-js": "^3.3.1",
-    "socket.io-client": "^4.1.2",
     "tiny-warning": "^1.0.3",
     "tinycolor2": "^1.4.2",
     "tippy.js": "^6.3.1",
     "vue": "^3.0.0",
-    "vue-native-websocket-vue3": "^3.1.4",
     "vue-request": "^1.2.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
@@ -47,7 +46,6 @@
   "devDependencies": {
     "@types/is-hotkey": "^0.1.3",
     "@types/qiniu-js": "^3.0.0",
-    "@types/socket.io-client": "^3.0.0",
     "@types/tinycolor2": "^1.4.2",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
