--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@tiptap/starter-kit": "^2.0.0-beta.89",
     "@tiptap/vue-3": "^2.0.0-beta.48",
     "@types/esrever": "^0.2.0",
+    "@vue/reactivity": "^3.2.23",
     "@vue/shared": "^3.0.11",
     "ant-design-vue": "2.1.2",
     "axios": "^0.21.1",
