--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@tiptap/extension-paragraph": "^2.0.0-beta.16",
     "@tiptap/extension-text": "^2.0.0-beta.13",
     "@tiptap/starter-kit": "^2.0.0-beta.89",
+    "@tiptap/suggestion": "^2.0.0-beta.85",
     "@tiptap/vue-3": "^2.0.0-beta.48",
     "@types/esrever": "^0.2.0",
     "@vue/reactivity": "^3.2.23",
@@ -33,11 +34,14 @@
     "edu-graph-constant": "0.0.14",
     "esrever": "^0.2.0",
     "immer": "^7.0.0",
+    "insert-css": "^2.0.0",
     "is-hotkey": "^0.2.0",
     "is-plain-object": "^3.0.0",
     "lodash": "^4.17.21",
+    "metagraph-constant": "0.0.1",
     "moment": "^2.29.1",
     "prosemirror-state": "^1.3.4",
+    "prosemirror-view": "^1.23.3",
     "qiniu-js": "^3.3.1",
     "tiny-warning": "^1.0.3",
     "tinycolor2": "^1.4.2",
@@ -50,6 +54,7 @@
     "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
+    "@types/insert-css": "^2.0.1",
     "@types/is-hotkey": "^0.1.3",
     "@types/jest": "^24.0.19",
     "@types/qiniu-js": "^3.0.0",
