--- a/package.json
+++ b/package.json
@@ -14,16 +14,16 @@
     "@antv/g6": "^4.2.5",
     "@antv/layout": "^0.1.16",
     "@antv/x6": "^1.18.1",
-    "@tiptap/core": "^2.0.0-beta.105",
-    "@tiptap/extension-character-count": "^2.0.0-beta.13",
+    "@tiptap/core": "^2.0.0-beta.159",
+    "@tiptap/extension-character-count": "^2.0.0-beta.24",
     "@tiptap/extension-document": "^2.0.0-beta.13",
     "@tiptap/extension-image": "^2.0.0-beta.24",
-    "@tiptap/extension-mention": "^2.0.0-beta.63",
+    "@tiptap/extension-mention": "^2.0.0-beta.90",
     "@tiptap/extension-paragraph": "^2.0.0-beta.16",
     "@tiptap/extension-text": "^2.0.0-beta.13",
-    "@tiptap/starter-kit": "^2.0.0-beta.89",
+    "@tiptap/starter-kit": "^2.0.0-beta.164",
     "@tiptap/suggestion": "^2.0.0-beta.85",
-    "@tiptap/vue-3": "^2.0.0-beta.48",
+    "@tiptap/vue-3": "^2.0.0-beta.85",
     "@types/esrever": "^0.2.0",
     "@vue/reactivity": "^3.2.23",
     "@vue/shared": "^3.0.11",
@@ -39,6 +39,7 @@
     "lodash": "^4.17.21",
     "metagraph-constant": "0.0.3",
     "moment": "^2.29.1",
+    "prosemirror-model": "^1.15.0",
     "prosemirror-state": "^1.3.4",
     "prosemirror-view": "^1.23.3",
     "qiniu-js": "^3.3.1",
@@ -84,7 +85,8 @@
     "typescript": "~4.1.5",
     "vue-jest": "^5.0.0-0",
     "vue-picture-cropper": "^0.4.0",
-    "vue-svg-loader": "^0.16.0"
+    "vue-svg-loader": "^0.16.0",
+    "webpack-bundle-analyzer": "^4.5.0"
   },
   "jest": {
     "moduleFileExtensions": [
