--- a/package.json
+++ b/package.json
@@ -14,33 +14,36 @@
     "@ant-design/icons-vue": "6.0.1",
     "@antv/g6": "4.3.11",
     "@antv/x6": "1.28.1",
-    "@tiptap/core": "^2.0.0-beta.159",
-    "@tiptap/extension-character-count": "^2.0.0-beta.24",
-    "@tiptap/extension-code-block-lowlight": "^2.0.0-beta.66",
-    "@tiptap/extension-document": "^2.0.0-beta.13",
-    "@tiptap/extension-image": "^2.0.0-beta.24",
-    "@tiptap/extension-mention": "^2.0.0-beta.90",
-    "@tiptap/extension-paragraph": "^2.0.0-beta.16",
-    "@tiptap/extension-task-item": "^2.0.0-beta.30",
-    "@tiptap/extension-task-list": "^2.0.0-beta.26",
-    "@tiptap/extension-text": "^2.0.0-beta.13",
-    "@tiptap/starter-kit": "^2.0.0-beta.164",
-    "@tiptap/suggestion": "^2.0.0-beta.85",
-    "@tiptap/vue-3": "^2.0.0-beta.85",
+    "@tiptap/core": "2.0.0-beta.159",
+    "@tiptap/extension-character-count": "2.0.0-beta.24",
+    "@tiptap/extension-code-block-lowlight": "2.0.0-beta.66",
+    "@tiptap/extension-document": "2.0.0-beta.13",
+    "@tiptap/extension-image": "2.0.0-beta.24",
+    "@tiptap/extension-mention": "2.0.0-beta.90",
+    "@tiptap/extension-paragraph": "2.0.0-beta.17",
+    "@tiptap/extension-task-item": "2.0.0-beta.30",
+    "@tiptap/extension-task-list": "2.0.0-beta.26",
+    "@tiptap/extension-text": "2.0.0-beta.13",
+    "@tiptap/starter-kit": "2.0.0-beta.164",
+    "@tiptap/suggestion": "2.0.0-beta.85",
+    "@tiptap/vue-3": "2.0.0-beta.85",
     "ant-design-vue": "2.2.8",
     "axios": "0.21.4",
     "core-js": "^3.6.5",
-    "insert-css": "^2.0.0",
-    "lodash": "^4.17.21",
-    "lowlight": "^2.5.0",
-    "metagraph-constant": "0.0.26",
-    "prosemirror-model": "^1.15.0",
-    "prosemirror-state": "^1.3.4",
-    "prosemirror-view": "^1.23.3",
+    "insert-css": "2.0.0",
+    "intro.js": "5.0.0",
+    "lodash": "4.17.21",
+    "lowlight": "2.5.0",
+    "metagraph-constant": "0.0.48",
+    "metagraph-ui": "0.0.2",
+    "prosemirror-model": "1.15.0",
+    "prosemirror-state": "1.3.4",
+    "prosemirror-view": "1.23.3",
     "qiniu-js": "3.4.0",
-    "tiny-warning": "^1.0.3",
-    "tinycolor2": "^1.4.2",
-    "tippy.js": "^6.3.1",
+    "tiny-warning": "1.0.3",
+    "tinycolor2": "1.4.2",
+    "tippy.js": "6.3.2",
+    "uuid": "^8.3.2",
     "vue": "3.2.20",
     "vue-cropper": "1.0.2",
     "vue-router": "4.0.12",
@@ -51,11 +54,12 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/insert-css": "^2.0.1",
+    "@types/intro.js": "^3.0.2",
     "@types/jest": "^24.0.19",
     "@types/lowlight": "0.0.3",
     "@types/node": "^17.0.17",
-    "@types/qiniu-js": "^3.0.0",
     "@types/tinycolor2": "^1.4.2",
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
     "@vue/babel-plugin-jsx": "^1.0.6",
@@ -78,7 +82,7 @@
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-vue": "^7.0.0",
     "express": "^4.17.2",
-    "node-sass": "^4.12.0",
+    "sass": "^1.50.0",
     "sass-loader": "^8.0.2",
     "ts-jest": "^26.4.2",
     "typescript": "~4.1.5",
