--- a/package.json
+++ b/package.json
@@ -30,11 +30,13 @@
     "ant-design-vue": "2.2.8",
     "axios": "0.21.4",
     "core-js": "^3.6.5",
+    "crypto-js": "^4.1.1",
+    "dexie": "^3.2.2",
     "insert-css": "2.0.0",
     "intro.js": "5.0.0",
     "lodash": "4.17.21",
     "lowlight": "2.5.0",
-    "metagraph-constant": "0.0.48",
+    "metagraph-constant": "0.0.105",
     "metagraph-ui": "0.0.2",
     "prosemirror-model": "1.15.0",
     "prosemirror-state": "1.3.4",
@@ -52,6 +54,7 @@
     "vuex-persistedstate": "4.1.0"
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.1.1",
     "@types/express": "^4.17.13",
     "@types/insert-css": "^2.0.1",
     "@types/intro.js": "^3.0.2",
