--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "NODE_ENV=development vue-cli-service serve",
+    "serve": "NODE_ENV=development vue-cli-service serve --mode production",
     "serve:local": "NODE_ENV=local vue-cli-service serve --mode local",
-    "build": "vue-cli-service build --mode production",
+    "build": "NODE_ENV=production vue-cli-service build --mode production",
     "test:unit": "vue-cli-service test:unit",
     "lint": "vue-cli-service lint",
     "test": "vue-cli-service test:unit",
@@ -37,7 +37,7 @@
     "intro.js": "5.0.0",
     "lodash": "4.17.21",
     "lowlight": "2.5.0",
-    "metagraph-constant": "0.0.105",
+    "metagraph-constant": "0.0.108",
     "metagraph-ui": "0.0.2",
     "prosemirror-model": "1.15.0",
     "prosemirror-state": "1.3.4",
