perf(style): 优化了滚动条样式。

--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "NODE_ENV=development vue-cli-service serve --mode production",
-    "serve:local": "NODE_ENV=local vue-cli-service serve --mode local",
-    "build": "NODE_ENV=production vue-cli-service build --mode production",
+    "serve": "cross-env NODE_ENV=development vue-cli-service serve --mode production",
+    "serve:local": "cross-env NODE_ENV=local vue-cli-service serve --mode local",
+    "build": "cross-env NODE_ENV=production vue-cli-service build --mode production",
     "test:unit": "vue-cli-service test:unit",
     "lint": "vue-cli-service lint",
     "test": "vue-cli-service test:unit",
@@ -88,6 +88,7 @@
     "babel-preset-latest": "^6.24.1",
     "chalk": "^5.0.0",
     "compression-webpack-plugin": "^6.1.1",
+    "cross-env": "^7.0.3",
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-vue": "^7.0.0",
