--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "cross-env NODE_ENV=development vue-cli-service serve --mode production",
+    "serve": "cross-env NODE_ENV=dev vue-cli-service serve --mode dev",
     "serve:local": "cross-env NODE_ENV=local vue-cli-service serve --mode local",
     "build": "cross-env NODE_ENV=production vue-cli-service build --mode production",
     "test:unit": "vue-cli-service test:unit",
