--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@tiptap/extension-task-item": "2.0.0-beta.30",
     "@tiptap/extension-task-list": "2.0.0-beta.26",
     "@tiptap/extension-text": "2.0.0-beta.13",
+    "@tiptap/extension-text-style": "^2.0.0-beta.209",
     "@tiptap/starter-kit": "2.0.0-beta.164",
     "@tiptap/suggestion": "2.0.0-beta.85",
     "@tiptap/vue-3": "2.0.0-beta.85",
@@ -42,7 +43,7 @@
     "intro.js": "5.0.0",
     "lodash": "4.17.21",
     "lowlight": "2.5.0",
-    "metagraph-constant": "0.0.108",
+    "metagraph-constant": "0.0.110",
     "metagraph-ui": "0.0.9",
     "prosemirror-model": "1.15.0",
     "prosemirror-state": "1.3.4",
