--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@tiptap/extension-task-item": "2.0.0-beta.30",
     "@tiptap/extension-task-list": "2.0.0-beta.26",
     "@tiptap/extension-text": "2.0.0-beta.13",
+    "@tiptap/extension-text-align": "^2.0.0-beta.213",
     "@tiptap/extension-text-style": "^2.0.0-beta.209",
     "@tiptap/starter-kit": "2.0.0-beta.164",
     "@tiptap/suggestion": "2.0.0-beta.85",
