perf(page): 优化页面样式

--- a/.env.dev
+++ b/.env.dev
@@ -1,3 +1,4 @@
 VUE_APP_TITLE=My App
-VUE_APP_API_BASE_URL=http://localhost:7250/
-VUE_APP_API_WEBSOCKET_BASE_URL=wss://localhost:8089/websocket
+VUE_APP_API_BASE_URL=https://www.metagraph.design/api
+VUE_APP_API_WEBSOCKET_BASE_URL=wss://www.metagraph.design/websocket
+
