--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "csv-parse": "^5.1.0",
     "d3": "^7.4.4",
     "dexie": "^3.2.2",
+    "docx-preview": "^0.1.15",
     "insert-css": "2.0.0",
     "intro.js": "5.0.0",
     "lodash": "4.17.21",
