--- a/package.json
+++ b/package.json
@@ -17,23 +17,24 @@
     "@antv/g6": "4.3.11",
     "@antv/x6": "1.28.1",
     "@antv/x6-vue-shape": "^1.4.0",
-    "@tiptap/core": "2.0.0-beta.159",
-    "@tiptap/extension-character-count": "2.0.0-beta.24",
-    "@tiptap/extension-code-block-lowlight": "2.0.0-beta.66",
-    "@tiptap/extension-document": "2.0.0-beta.13",
-    "@tiptap/extension-image": "2.0.0-beta.24",
-    "@tiptap/extension-mention": "2.0.0-beta.90",
-    "@tiptap/extension-paragraph": "2.0.0-beta.17",
-    "@tiptap/extension-placeholder": "^2.0.0-beta.48",
-    "@tiptap/extension-task-item": "2.0.0-beta.30",
-    "@tiptap/extension-task-list": "2.0.0-beta.26",
-    "@tiptap/extension-text": "2.0.0-beta.13",
-    "@tiptap/extension-text-align": "^2.0.0-beta.213",
-    "@tiptap/extension-text-style": "^2.0.0-beta.209",
-    "@tiptap/starter-kit": "2.0.0-beta.164",
-    "@tiptap/suggestion": "2.0.0-beta.85",
-    "@tiptap/vue-3": "2.0.0-beta.85",
-    "ant-design-vue": "2.2.8",
+    "@tiptap/core": "^2.0.1",
+    "@tiptap/extension-character-count": "^2.0.1",
+    "@tiptap/extension-code-block-lowlight": "^2.0.1",
+    "@tiptap/extension-document": "^2.0.1",
+    "@tiptap/extension-image": "^2.0.1",
+    "@tiptap/extension-mention": "^2.0.1",
+    "@tiptap/extension-paragraph": "^2.0.1",
+    "@tiptap/extension-placeholder": "^2.0.1",
+    "@tiptap/extension-task-item": "^2.0.1",
+    "@tiptap/extension-task-list": "^2.0.1",
+    "@tiptap/extension-text": "^2.0.1",
+    "@tiptap/extension-text-align": "^2.0.1",
+    "@tiptap/extension-text-style": "^2.0.1",
+    "@tiptap/pm": "^2.0.1",
+    "@tiptap/starter-kit": "^2.0.1",
+    "@tiptap/suggestion": "^2.0.1",
+    "@tiptap/vue-3": "^2.0.1",
+    "ant-design-vue": "3.2.16",
     "axios": "0.21.4",
     "core-js": "^3.6.5",
     "crypto-js": "^4.1.1",
@@ -47,9 +48,6 @@
     "lowlight": "2.5.0",
     "metagraph-constant": "0.0.110",
     "metagraph-ui": "0.0.9",
-    "prosemirror-model": "1.15.0",
-    "prosemirror-state": "1.3.4",
-    "prosemirror-view": "1.23.3",
     "qiniu-js": "3.4.0",
     "tiny-warning": "1.0.3",
     "tinycolor2": "1.4.2",
@@ -87,7 +85,6 @@
     "@vue/eslint-config-airbnb": "^5.0.2",
     "@vue/eslint-config-typescript": "^7.0.0",
     "@vue/test-utils": "^2.0.0-0",
-    "babel-plugin-import": "^1.13.3",
     "babel-preset-latest": "^6.24.1",
     "chalk": "^5.0.0",
     "compression-webpack-plugin": "^6.1.1",
