--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@tiptap/vue-3": "^2.0.1",
     "ant-design-vue": "3.2.16",
     "axios": "0.21.4",
+    "clipboard": "^2.0.11",
     "core-js": "^3.6.5",
     "crypto-js": "^4.1.1",
     "csv-parse": "^5.1.0",
