--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "deploy": "node deploy.js"
   },
   "dependencies": {
-    "@ant-design/icons-vue": "6.0.1",
+    "@ant-design/icons-vue": "6.1.0",
     "@antv/g6": "4.3.11",
     "@antv/x6": "1.28.1",
     "@antv/x6-vue-shape": "^1.4.0",
@@ -67,6 +67,7 @@
     "@types/insert-css": "^2.0.1",
     "@types/intro.js": "^3.0.2",
     "@types/jest": "^24.0.19",
+    "@types/lodash": "^4.14.194",
     "@types/lowlight": "0.0.3",
     "@types/node": "^17.0.17",
     "@types/tinycolor2": "^1.4.2",
